<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_manipulation_navigation</name>
  <version>2.0.2</version>
  <description>
    The turtlebot3_manipulation_navigation package added.
  </description>
  <license>Apache 2.0</license>
  <author email="willson@robotis.com">Will Son</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <!-- <url type="website">http://wiki.ros.org/turtlebot3_manipulation</url> -->
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/turtlebot3/manipulation</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_manipulation</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_manipulation/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
</package>
